--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,96 @@
     width: 100%;
     min-height: 100vh;
     margin: 0 auto;
+    box-shadow: 0 5px 6px rgb(207, 159, 70);
     box-sizing: 0 2px 6px #080808;
     padding: 0 15px;
     box-sizing: border-box;
+}
+.title{
+    font-size: 2.4rem;
+    padding: 10rem 0 0 0;
+    color: rgb(197, 132, 10);
+}
+.productos {
+    padding: 5rem ;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
+    gap: 3rem 1rem;
+    box-sizing: border-box;
+}
+.producto{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 1px 10px 10px 2px rgb(0,0,0 .2);
+    border: 6px solid transparent;
+    border-radius: 5px;
+}
+.producto:hover{
+    border: 6px solid #be7a12;
+}
+.producto__img img{
+    width: 310px;
+}
+.producto__footer{
+    padding: 1rem;
+}
+.producto__footer h1 { 
+    font-weight: 600;
+    font-size: 1.5rem;
+    color: black;
+    font-family: Helvetica, sans-serif;
+}
+.producto__footer p {
+    font-weight: 700;
+    color: rgba(0,0,0 , .555);
+    text-transform: uppercase;
+    font-size: 18px;
+}
+.producto__footer .price{
+    font-size: 2rem;
+    color: #1a202c;
+}
+.producto .buttom{
+    width: 100%;
+    height: 30px;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 1rem 3rem;
+}
+.buttom .btn{
+    border: none;
+    outline: 0;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 15px;
+
+}
+.buttom button{
+    background-color: orange;
+    max-width: 250px;
+    width: 100%;
+    margin: 0 auto;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+.buttom div {
+    background-color: rgb(224, 157, 11);
+    display: grid;
+    align-items: center;
+    margin-left: -2rem;
+    border-radius: 5px;
+    justify-content: center;
+    
+}
+.buttom div a {
+    color: white;
+    font-weight: 700;
+    width: 10px;
+}
+.buttom div a:hover{
+    color: white;
+    font-weight: 700;
+    
 }
