--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 *{
     margin: 0;
     padding: 0;
+    
+}
+body{
+    background-color: rgb(243, 202, 149);
 }
 .App{
     max-width: 1550px;
@@ -15,7 +19,7 @@
 .title{
     font-size: 2.4rem;
     padding: 10rem 0 0 0;
-    color: rgb(197, 132, 10);
+    color: rgb(255, 81, 0);
 }
 .productos {
     padding: 5rem ;
