--- a/src/index.css
+++ b/src/index.css
@@ -1,83 +1,159 @@
-*{
+* {
     margin: 0;
     padding: 0;
-    
 }
-body{
-    background-color: rgb(243, 202, 149);
+
+body {
+    background-color: rgb(255, 255, 255);
 }
-.App{
+
+.App {
     max-width: 1550px;
     width: 100%;
     min-height: 100vh;
     margin: 0 auto;
-    box-shadow: 0 5px 6px rgb(207, 159, 70);
+    box-shadow: 0 5px 6px rgb(255, 255, 255);
     box-sizing: 0 2px 6px #080808;
     padding: 0 15px;
     box-sizing: border-box;
 }
-.title{
+/*---------HEADER----------*/
+header{
+    width: 97%;
+    min-height: 100px;
+    max-width: 1530px;
+    overflow: hidden;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    position: fixed;
+    box-sizing: border-box;
+    background-color: #ffffff;
+    box-shadow: 0 5px 10px rgb(255, 0, 0);
+}
+a{
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    text-transform: uppercase;
+}
+a:hover{
+    color: red;
+}
+li{
+    list-style: none;
+}
+header ul{
+    display: flex;
+    padding: 0;
+    margin: 0;
+}
+header ul li{
+    padding: 0 1rem;
+
+}
+header ul li a{
+    font-weight: bold;
+
+}
+header .cart {
+    position: relative;
+    cursor: pointer;
+    
+}
+header .cart box-icon{
+    width: 45px;
+    height: 45px;
+}
+header .cart span{
+    position: absolute;
+    top: -1rem;
+    right: -1.5rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    border: 1px solid;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    padding: 0rem;
+    font-size: 1.5rem;
+    font-weight: 700;
+    background-color: red;
+}
+.title {
     font-size: 2.4rem;
     padding: 10rem 0 0 0;
     color: rgb(255, 81, 0);
 }
+
 .productos {
-    padding: 5rem ;
+    padding: 5rem;
     margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
     gap: 3rem 1rem;
     box-sizing: border-box;
 }
-.producto{
+
+.producto {
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: 1px 10px 10px 2px rgb(0,0,0 .2);
+    box-shadow: 1px 10px 10px 2px rgb(0, 0, 0 0.2);
     border: 6px solid transparent;
     border-radius: 5px;
 }
-.producto:hover{
+
+.producto:hover {
     border: 6px solid #be7a12;
 }
-.producto__img img{
+
+.producto__img img {
     width: 310px;
 }
-.producto__footer{
+
+.producto__footer {
     padding: 1rem;
 }
-.producto__footer h1 { 
+
+.producto__footer h1 {
     font-weight: 600;
     font-size: 1.5rem;
     color: black;
     font-family: Helvetica, sans-serif;
 }
+
 .producto__footer p {
     font-weight: 700;
-    color: rgba(0,0,0 , .555);
+    color: rgba(0, 0, 0, 0.555);
     text-transform: uppercase;
     font-size: 18px;
 }
-.producto__footer .price{
+
+.producto__footer .price {
     font-size: 2rem;
     color: #1a202c;
 }
-.producto .buttom{
+
+.producto .buttom {
     width: 100%;
     height: 30px;
     display: grid;
     grid-template-columns: 2fr 1fr;
     gap: 1rem 3rem;
 }
-.buttom .btn{
+
+.buttom .btn {
     border: none;
     outline: 0;
     cursor: pointer;
     border-radius: 5px;
     font-size: 15px;
-
 }
-.buttom button{
+
+.buttom button {
     background-color: orange;
     max-width: 250px;
     width: 100%;
@@ -85,6 +161,7 @@ body{
     font-size: 1.5rem;
     font-weight: 600;
 }
+
 .buttom div {
     background-color: rgb(224, 157, 11);
     display: grid;
@@ -92,15 +169,177 @@ body{
     margin-left: -2rem;
     border-radius: 5px;
     justify-content: center;
-    
 }
+
 .buttom div a {
     color: white;
     font-weight: 700;
     width: 10px;
 }
-.buttom div a:hover{
+
+.buttom div a:hover {
     color: white;
     font-weight: 700;
-    
+}
+
+/*************CARRITO**********/
+.carritos {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: all 300ms ease-in-out;
+    background-color: rgb(0, 0, 0, 0.6);
+    z-index: 2;
+    padding-bottom: 5rem;
+    visibility: hidden;
+}
+
+.carrito {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    width: 60%;
+    height: 80%;
+    border-radius: 8px;
+    overflow-x: scroll;
+    transform: all 300ms ease-in-out;
+    background-color: white;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.carrito h2 {
+    text-align: center;
+    font-size: 2rem;
+}
+
+.carrito.show {
+    visibility: visible;
+}
+
+.carrito.show {
+    transform: translate(-50%, -50%) scale(1.1);
+    opacity: 1;
+    visibility: visible;
+}
+
+.carrito__close box-icon{
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    transform: all 300ms ease-in-out;
+    margin: 3rem 0 0 2rem;
+}
+.carrito__close box-icon:hover{
+    fill: crimson;
+}
+.carrito__center{
+    width: 90%;
+    margin: 0 auto;
+}
+.carrito__item{
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr 1fr;
+    width: 80%;
+    margin: 2rem auto;
+    box-shadow: 0 1px 10px rgb(72, 255, 0);
+    border-radius: 5px;
+}
+.carrito__item img{
+    width: 9rem;
+}
+.carrito__item h3{
+    margin-top: 1.5rem;
+    font-size: 1.5rem;
+    font-family:  Helvetica, sans-serif;
+}
+.carrito__item .price{
+    color: #1a202c;
+    font-size: 2rem;
+    font-weight: bold;
+    text-align: start;
+    margin-left: -0.1rem;
+}
+.carrito__item box-icon{
+    fill: rgb(72, 255, 0);
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    margin: .3rem;
+}
+.carrito__item .cantidad{
+    font-size: 2rem;
+    font-weight: bold;
+}
+.carrito__item .remove__item box-icon{
+    width: 60px;
+    height: 80px;
+    fill: crimson;
+    margin-top: 2rem;
+}.carrito__footer{
+    text-align: center;
+    margin-bottom: 3rem;
+}
+.carrito__footer h3{
+    font-size: 2rem;
+    font-weight: 700;
+    letter-spacing: 1px;
+}
+.carrito__footer .btn{
+    display: inline-block;
+    padding: .3rem 1rem;
+    font-size: 1.2rem;
+    background-color: rgb(72, 255, 0);
+    border: 0;
+    outline: 0;
+    cursor: pointer;
+}
+.carrito__footer .btn{
+    display: inline-block;
+    padding: .3rem 1rem;
+    font-size: 1.2rem;
+    background-color: rgb(72, 255, 0);
+    border: 0;
+    outline: 0;
+    cursor: pointer;
+}
+.carrito__footer .btn:hover{
+    background-color: rgb(115, 255, 0);
+    color: white;
+}
+
+
+/*-------------MEDIA-------------*/
+@media only screen and (max-width:1000px ){
+    .carrito__item{
+        width: 92%;
+    }
+}
+@media only screen and (max-width:600px ){
+header ul{
+    display: none;
+}
+}
+@media only screen and (max-width:700px ){
+    .carrito__item{
+        width: 100%;
+        height: 100%;
+        padding: 1rem;
+    }
+    .carrito__item h3{
+        font-size: 1.2rem;
+    }
+}
+@media only screen and (max-width:450px ){
+    .carrito__item h3{
+        display: .5rem;
+    }
+    .carrito__item .remove__item box-icon{
+        width: 30px;
+        height: 70px;
+    }
 }
